--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'war'
+
 
 group = 'com.rokada'
 version = '0.0.1-SNAPSHOT'
@@ -39,6 +41,9 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    providedRuntime
+}
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-actuator')
